component.Helix: overflow hidden is causing issues in firefox #5511

--- a/resources/scss/src/component/Helix.scss
+++ b/resources/scss/src/component/Helix.scss
@@ -4,7 +4,6 @@
     display         : flex;
     font-family     : var(--neo-font-family);
     margin          : 0;
-    overflow        : hidden;
     padding         : 0;
     perspective     : 800px;
     transform       : translateZ(0px);
